@@ -1,3 +1,8 @@
+2006-10-11  Mark Mitchell  <mark@codesourcery.com>
+
+	PR c++/29175
+	* g++.dg/init/array24.C: New test.
+
 2006-10-11  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* gcc.dg/builtins-config.h: Move Solaris section after inclusion
